feat: implement AI-driven video moderation, recommendation, and category management services